export class Swipe {
  constructor(
    public readonly uid: string,
    public readonly cardId: string,
    public readonly right: boolean,
  ) { }
}
