
export class Card {
  constructor(
    public readonly id: string,
    public readonly title: string,
    public readonly imageUrl: string,
  ) { }
}