
export class Match {
  constructor(public readonly id: string) { }
}