@startuml

class Finder
class Card
class Match
class Right
class Left
class Swipe
class Candidate
class Profile
class Conversation

Finder *-->  Candidate
Finder *--> "1..C" Card

Candidate o--> "0..C" Swipe
Candidate *--> Profile
Candidate --> "0..1" Match

Swipe --> "1" Card

Card *--> "0..S" Score

Profile *--> Mail

Right -up-|> Swipe
Left -up-|> Swipe
Match --> "M..m" Score

Match -->  Conversation

@enduml